# stm32f4-energy-monitor

./: .gitignore  53-energy-monitor.rules  AUTHORS  Energy monitor commands  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure  configure.ac  energy_monitor  energy_monitor.c  host_receiver  libopencm3_stm32f4.ld  recv.c  stm32f4.sublime-project
firmware/: Makefile.am  Makefile.in  README  configure  configure.ac  energy_monitor
firmware/src/: Makefile.in  energy_monitor.c
host/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  dataprocessor.cpp  dataprocessor.h  helper.cpp  host_receiver.cpp  host_receiver.h  libusbinterface.cpp  libusbinterface.h  pymodule.cpp
include/: stm32f4xx.h
platformrun/: configure  configure.ac  platformrun.py  platformrun.py.in
pyenergy/: README.md  README.rst  debug.py  graph.py  setup.py
pyenergy/src/platformrun/: README.md  __init__.py  detect.py  measurement.json  platformrun.py
pyenergy/src/pyenergy/: __init__.py  interactive_graph.py  pyenergy.py  tools.py  upgrade.py
pyenergy/tests/: tests.py
rules/: 53-energy-monitor.rules  54-jtagice3.rules
src/firmware/: Makefile.am  Makefile.in  energy_monitor  energy_monitor.c  libopencm3_stm32f4.ld
src/host/: Makefile.am  configure.ac  dataprocessor.cpp  helper.cpp  helper.h  host_receiver.cpp  host_receiver.h  libusbinterface.cpp  libusbinterface.h  pymodule.cpp
src/python/: continuous.py  debug.py  graph.py  interactive_graph.py  pyenergy.py  read.py  tests.py
std_lib/src/: stm32f4xx_adc.c
